# axo

./: AAA  README.md  build.sh  compile.sh  main  main.c  makefile
AXO/: axo.h
AXO/include/core/: app.h  parent.h  theme.h
AXO/include/widgets/: button.h  container.h  drop.h  entry.h  image.h  progress.h  text.h  textbox.h
AXO/src/core/: app.c  parent.c
AXO/src/widgets/: button.c  container.c  drop.c  entry.c  image.c  progress.c  radio.c  slider.c  text.c  textbox.c
axo/: axo.c  axo.h
axo/asset/icons/: iconunicode.h
axo/include/backends/sdl2/: sdl2.h  sdl2_draw.h  sdl2_events.h  sdl2_ttf.h
axo/include/core/: app.h  backend_interface.h  parent.h  theme.h
axo/include/widgets/: button.h  container.h  drop.h  entry.h  image.h  progress.h  radio.h  slider.h  text.h  textbox.h
axo/src/core/: app.c  parent.c  theme.c
axo/src/widgets/: button.c  container.c  drop.c  entry.c  image.c  progress.c  radio.c  slider.c  text.c  textbox.c
examples/: CMakeLists.txt  build.sh  example  main.c  testclip.c
examples/demo/: main.c
forms/: form.h
forms/core/: app.h  parent.h  theme.h
forms/include/core/: app.h  color.h  debug.h  graphics.h  interface.h  parent.h  sdl2_backend.h  theme.h
forms/include/widgets/: button.h  container.h  drop.h  entry.h  image.h  progress.h  radio.h  slider.h  text.h  textbox.h
forms/src/core/: app.c  color.c  graphics.c  interface.c  parent.c  sdl2_backend.c  theme.c
forms/src/widgets/: button.c  container.c  drop.c  entry.c  entry.h  image.c  progress.c  radio.c  radio.h  slider.c  text.c  textbox.c
(+24 files in other folders)
